Fixing the jumping logo issue

--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -9760,7 +9760,7 @@ input[type="radio"].resolution_radio_button {
 .copyright-area {
   width: 150px;
   height: 100px;
-  position: fixed;
+  position: sticky;
   bottom: 20px;
   left: 25px;
   text-align: center;
@@ -9779,11 +9779,6 @@ input[type="radio"].resolution_radio_button {
     line-height: 16px;
     color: darken($content-bg-color, 10%);
   }
-}
-
-// ensure the logo + copyright sticks to bottom of sidenav container
-#sidenav-menu-div .nav-container {
-  height: 100vh;
 }
 
 #nav-trigger:checked ~ #sidenav-menu-div .copyright-area {
